重构Tree封装方式